argocd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nbfc-api
  namespace: prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nbfc-api
      role: nbfc-api
  template:
    metadata:
      labels:
        app: nbfc-api
        role: nbfc-api
    spec:
      containers:
      - name: nbfc-api
        image: ghcr.io/npstx-mumbai/nbfc-api:1.0.1-test
        imagePullPolicy: Always
       # resources:
          # requests:
# #            # cpu: 100m
           #  memory: 1G
          # limits:
#            # cpu: 100m
           # memory: 3G
        ports:
        - containerPort: 3000
      imagePullSecrets:
      - name: dockerconfigjson-github-com
