argocd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nbfc-api-service
  namespace: prod
spec:
  selector:
    app: nbfc-api
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
